# fastapi-lib-template

./: .bumpversion.cfg  .dockerignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/instructions/: api-design.instructions.md  architecture-stack.instructions.md  architecture-stack.md  copilot-instructions.md  readme-guidelines.md  testing-guidelines.md
.github/workflows/: release.yml
src/: __init__.py  __version__.py  main.py
src/api/: __init__.py  __version__.py  main.py  pyproject.toml
src/api/config/: env.py
src/api/core/: middelware.py  telemetry.py  utils.py
src/api/models/: __init__.py
src/api/routers/: __init__.py  test.py
src/api/tests/: test_api.py
src/config/: __init__.py
src/core/: middelware.py  telemetry.py  utils.py
src/models/: credentials.py
src/routers/: test.py
src/template_api/: __init__.py  __version__.py  main.py  pyproject.toml
src/template_api/config/: env.py
src/template_api/core/: __init__.py  middelware.py  telemetry.py  utils.py
src/template_api/routers/: test.py
src/template_api/tests/: __init__.py  test_api.py
src/template_api/tests/e2e/: __init__.py  test_api_e2e.py
src/template_api/tests/unit/: __init__.py
src/template_lib/: __version__.py  pyproject.toml
src/template_lib/services/: processing.py
src/template_lib/tests/e2e/: __init__.py
src/template_lib/tests/unit/: __init__.py
tests/: test_api.py
