[project]
name = "template-api"
version = "0.1.1"
description = "FastAPI application with OpenTelemetry"
readme = "../../README.md"
requires-python = ">=3.9"
authors = [
    { name = "German Aragon Caminero", email = "german.aragon@unican.es" }
]

dependencies = [
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.2",
    "template-lib",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation>=0.59b0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-instrumentation-logging>=0.59b0",
    "opentelemetry-instrumentation-requests>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
]

[tool.uv.sources]
template-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
