[project]
name = "template-lib"
version = "0.1.1"
description = "Library for data processing"
readme = "../../README.md"
requires-python = ">=3.9"
authors = [
    { name = "German Aragon Caminero", email = "german.aragon@unican.es" }
]

dependencies = [
    "matplotlib>=3.9.4",
    "xarray[complete]>=2024.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
